# homebot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: api.py  client.py  log.py  main.py  schemas.py
app/api/: __init__.py
app/api/v1/: api.py
app/api/v1/endpoints/: health.py
app/client/: base.py  local.py
app/devices/: base.py  manager.py  xiaomi_cuco_switch.py
app/services/: callback.py  chain.py
app/services/chat/: llm.py  prompt.jinja
app/services/voice/: asr.py  mp3player.py  stt.py  tts.py
app/static/: index.html
resources/: 豆豆_zh_mac_v4_0_0.ppn
tests/: test_api.py  test_asr.py  test_chain.py  test_config.py  test_schemas.py  test_tts.py  test_xiaomi_power.py
